--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   web:
     build: .
     ports:
-      - "5000:5000"
+      - "80:80"
 networks:
-  - bridge
+  default:
+    external: true
+    name: bridge
